--- a/hangman.html
+++ b/hangman.html
@@ -14,11 +14,16 @@
 		</div>
 		<div id="word"></div>
 		<div id="lives"></div>
+		<button id="reset">Reset</button>
+		<button id="hint">Hint</button>
 
 
 		<script type="text/javascript">
 
-			var words = ["STAR WARS", "JABBA THE HUTT", "DARTH VADER", "BOBA FETT", "LUKE SKYWALKER", "PRINCESS LEIA", "HAN SOLO", "DEATH STAR", "CHEWBACCA"];
+			var words = ["STAR WARS", "JABBA THE HUTT", "DARTH VADER", "BOBA FETT", "LUKE SKYWALKER", "PRINCESS LEIA", "HAN SOLO", "DEATH STAR", "CHEWBACCA", "LIGHTSABER", "YODA"];
+
+			var hints = ["Best... Movie... Ever...", "Crime does pay", "Heavy breather", "Watch out for that Sarlacc!", "Really just wants to go to Tosche Station", "Does anyone else feel the need for a Cinnabon?", "FREEZE!", "this != moon;", "Fuzzball", "Pure elegance", "sizeOf(this) != judgement;"]
+
 			var alphabet = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "Y", "Z"];
 
 			var userGuess = "";
@@ -29,28 +34,49 @@
 			var wordDiv = document.getElementById("word");
 			var livesDiv = document.getElementById("lives");
 
-			var wordIndexer = Math.floor((Math.random() * (words.length)));
-			var currentWord = words[wordIndexer];
-			console.log(currentWord);
+			var wordIndexer = 0;// = Math.floor((Math.random() * (words.length)));
+			var currentWord = "";// = words[wordIndexer];
+			//console.log(currentWord);
 
-			for (var i = 0; i < currentWord.length; i++) {
-				if (currentWord[i] == " ") {
-					guessedWord += " ";
-				} else {
-					guessedWord += "_";
+			// for (var i = 0; i < currentWord.length; i++) {
+			// 	if (currentWord[i] == " ") {
+			// 		guessedWord += " ";
+			// 	} else {
+			// 		guessedWord += "_";
+			// 	}
+			// }
+
+			function resetGame() {
+				userGuess = "";
+				guessedWord = "";
+				lettersGuessed = [];
+				lives = 10;
+				wordIndexer = Math.floor((Math.random() * (words.length)));
+				currentWord = words[wordIndexer];
+				console.log(currentWord);
+				for (var i = 0; i < currentWord.length; i++) {
+					if (currentWord[i] == " ") {
+						guessedWord += " ";
+					} else {
+						guessedWord += "_";
+					}
 				}
+				update();
 			}
 
+			resetGame();
+
 			function updateString() {
-				guessedWord = [""];
-				console.log("cleared guessedWord: " + guessedWord);
+				guessedWord = "";
+				// console.log("cleared guessedWord: " + guessedWord);
 				var letter;
 				for (var i = 0; i < currentWord.length; i++) {
 					for (var j = 0; j < lettersGuessed.length; j++) {
-						console.log(lettersGuessed[j]);
+						// console.log(lettersGuessed[j]);
 						if (currentWord[i] === lettersGuessed[j]) {
-							letter = currentWord[i];
-							console.log("letter matched")
+						// if (lettersGuessed[j] == currentWord[i]) {
+							letter += currentWord[i];
+							// console.log(guessedWord);
 						} else if (currentWord[i] === " ") {
 							letter = " ";
 						} else {
@@ -59,8 +85,9 @@
 					// guessedWord += letter;
 					}
 				guessedWord += letter;
+				console.log("guessedWord: " + guessedWord)
 				}
-				console.log(guessedWord);
+				// guessedWord += letter;
 				if (currentWord.indexOf(userGuess) == -1) {
 					lives--;
 					console.log("lives: " + lives);
@@ -69,8 +96,6 @@
 					livesDiv.innerHTML = ("You win!");
 				}
 			}
-
-
 
 			// function check(guess) {
 			// 	for (var j = 0; j < currentWord.length; j++) {
@@ -112,18 +137,31 @@
 					userGuess = String.fromCharCode(event.keyCode).toUpperCase();
 					if (alphabet.indexOf(userGuess) !== -1) {
 						userGuess = userGuess;
-						console.log("you picked a letter!")
+						// console.log("you picked a letter!")
 					} else {
 						livesDiv.innerHTML = ("Please enter a letter!");
 						return;
 					}
-					console.log("letter guessed: " + userGuess);
+					if (lettersGuessed.indexOf(userGuess) >= 0) {
+						livesDiv.innerHTML = ("Dude, you already guessed that letter!");
+						return;
+					}
+					// console.log("letter guessed: " + userGuess);
 					lettersGuessed.push(userGuess);
 					console.log(lettersGuessed);
 					updateString();
 					update();
 				}
 			}
+
+			document.getElementById('reset').onclick = function() {
+ 		    	resetGame();
+ 		    	console.log("game reset!");
+  			}
+
+  			document.getElementById('hint').onclick = function() {
+ 		    	livesDiv.innerHTML = (hints[wordIndexer])
+  			}
 
 		</script>
 	</body>
