--- a/hangman.html
+++ b/hangman.html
@@ -6,18 +6,27 @@
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/fonts/fonts.css">
 		<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 	</head>
 
 	<body>
-		<!-- <div class="center"></div> -->
-		<div class="header sans-serif wrapper">
+		<div class="header sans-serif spaced-out">
 			<h1>Star Wars Hangman</h1>
 		</div>
-		<div class="sans-serif wrapper" id="word"></div>
-		<div class="sans-serif wrapper" id="lives"></div>
-		<button class="sans-serif wrapper" id="reset">Reset</button>
-		<button class="sans-serif wrapper" id="hint">Hint</button>
+		<div class="sans-serif word-div wrapper" >
+			<span id="word" class="spaced-out"></span>
+		</div>
+		<div class="sans-serif lives-div wrapper">
+			<span id="lives" class="spaced-out"></span>
+		</div>
+		<div class="button-div">
+			<button class="sans-serif wrapper spaced-out" id="reset">Reset</button>
+			<button class="sans-serif wrapper spaced-out-more" id="hint">Hint</button>
+		</div>
+		<div class="display-div">
+			<span class="sans-serif spaced-out-more" id="display"></span>
+		</div>
 
 
 		<script type="text/javascript">
@@ -34,29 +43,25 @@
 			var lives = 10;
 			var space = 0;
 			var counter = 0;
+			var letter = "";
+			var win = false;
 
 			var wordDiv = document.getElementById("word");
 			var livesDiv = document.getElementById("lives");
+			var targetDiv = document.getElementById("display");
 
 			var wordIndexer = 0;// = Math.floor((Math.random() * (words.length)));
 			var currentWord = "";// = words[wordIndexer];
-			//console.log(currentWord);
-
-			// for (var i = 0; i < currentWord.length; i++) {
-			// 	if (currentWord[i] == " ") {
-			// 		guessedWord += " ";
-			// 	} else {
-			// 		guessedWord += "_";
-			// 	}
-			// }
 
 			function resetGame() {
 				userGuess = "";
 				guessedWord = "";
 				lettersGuessed = [];
+				targetDiv.innerHTML = "";
 				lives = 10;
 				space = 0;
 				counter = 0;
+				win = false;
 				wordIndexer = Math.floor((Math.random() * (words.length)));
 				currentWord = words[wordIndexer];
 				console.log(currentWord);
@@ -73,57 +78,48 @@
 			resetGame();
 
 			function updateString() {
+				var currentLetter = "";
 				guessedWord = "";
 				space = 0;
 				counter = 0;
 				// console.log("cleared guessedWord: " + guessedWord);
-				var letter;
+				// var letter;
 				for (var i = 0; i < currentWord.length; i++) {
-					console.log("currentWord[i] = " + currentWord[i]);
-					if (currentWord[i] == " ") {
+					currentLetter = currentWord[i];
+					console.log("currentWord[i] = " + currentLetter);
+					if (currentLetter == " ") {
 						letter = " ";
 						space++;
-					} else if (alphabet.indexOf(currentWord[i]) >= 0) {
-						for (var j = 0; j < lettersGuessed.length; j++) {
-							if (currentWord[i] == lettersGuessed[j]) {
-								console.log("letter matches");
-								letter = currentWord[i];
-								counter++;
-								// break;
-							}
+					} else if (alphabet.indexOf(currentLetter) >= 0) {
+						if (lettersGuessed.indexOf(currentLetter) >= 0) {
+							console.log("letter matches");
+							letter = currentLetter;
+							counter++;
+						} else {
+							letter = "_";
 						}
-					} else {
-						letter = "_";
 					}
+					console.log(letter);
 					guessedWord += letter;
+					console.log(guessedWord);
 				}
 				
-				console.log("guessedWord: " + guessedWord);
+				// console.log("guessedWord: " + guessedWord);
 				// guessedWord += letter;
 				if (currentWord.indexOf(userGuess) == -1) {
 					lives--;
-					console.log("lives: " + lives);
+					// console.log("lives: " + lives);
 				}
-				if ((space + counter) == currentWord.length) {
-					livesDiv.innerHTML = ("You win!");
+				if ((space + counter) === currentWord.length) {
+					win = true;
+					update();
 				}
-				console.log(counter + space);
+				console.log("ctr + spc: " + counter + space);
 				console.log("length: " + currentWord.length);
-			}
-
-			// function check(guess) {
-			// 	for (var j = 0; j < currentWord.length; j++) {
-			// 		var letter = currentWord.charAt(j);
-			// 		if (currentWord[j] == guess) {
-			// 			console.log(letter);
-			// 			console.log("letter matches");
-			// 			updateString(j, guess);
-			// 			// guessedWord.replaceAt(j, guess) = guess;
-			// 			console.log(guessedWord);
-			// 		}
-			// 	}
-			// 	console.log(guessedWord);
-			// }
+				console.log("length type: " + typeof(currentWord.length));
+				console.log("ctr type: " + typeof(counter));
+				console.log("spc type: " + typeof(space));
+			}	//end of updateString
 
 			function update() {
 				wordDiv.innerHTML = "";
@@ -136,18 +132,23 @@
 						wordDiv.innerHTML += "_ ";
 					}	
 				}
-				if (lives > 0) {
+				if (win == true) {
+					livesDiv.innerHTML = ("The force is strong with this one!")
+				}
+				if (lives > 0 && win == false) {
 					livesDiv.innerHTML = ("You have " + lives + " lives!");
-				} else {
+				} else if (lives == 0) {
 					livesDiv.innerHTML = ("You have failed me for the last time!");
 				}
-				
+				targetDiv.innerHTML = lettersGuessed;
+				// targetDiv.attr('width', '200px');
+				// targetDiv.text(lettersGuessed);
 			}
 
-			update();
+			// update();
 
 			document.onkeyup = function(event) {
-				if (lives > 0) {
+				if (lives > 0 && win == false) {
 					userGuess = String.fromCharCode(event.keyCode).toUpperCase();
 					if (alphabet.indexOf(userGuess) !== -1) {
 						userGuess = userGuess;
@@ -174,7 +175,9 @@
   			}
 
   			document.getElementById('hint').onclick = function() {
- 		    	livesDiv.innerHTML = (hints[wordIndexer]);
+ 		    	if (lives > 0 && win == false) {
+ 		    		livesDiv.innerHTML = (hints[wordIndexer]);
+ 		    	}
   			}
 
 		</script>
