added more words, adjusted css

--- a/hangman.html
+++ b/hangman.html
@@ -31,9 +31,9 @@
 
 		<script type="text/javascript">
 
-			var words = ["STAR WARS", "JABBA THE HUTT", "DARTH VADER", "BOBA FETT", "LUKE SKYWALKER", "PRINCESS LEIA", "HAN SOLO", "DEATH STAR", "CHEWBACCA", "LIGHTSABER", "YODA"];
+			var words = ["STAR WARS", "JABBA THE HUTT", "DARTH VADER", "BOBA FETT", "LUKE SKYWALKER", "PRINCESS LEIA", "HAN SOLO", "DEATH STAR", "CHEWBACCA", "LIGHTSABER", "YODA", "EWOK", "LANDO CALRISSIAN", "EMPEROR PALPATINE", "TATOOINE", "MILLENIUM FALCON", "JEDI", "SITH", "JANGO FETT", "COUNT DOOKU", "BIKER SCOUT", "OBI WAN KENOBI"];
 
-			var hints = ["Best... Movie... Ever...", "Crime does pay", "Heavy breather", "Watch out for that Sarlacc!", "Really just wants to go to Tosche Station", "Does anyone else feel the need for a Cinnabon?", "FREEZE!", "this \!\= moon\;", "Fuzzball", "Pure elegance", "sizeOf\(this\) \!\= judgement\;"];
+			var hints = ["Best... Movie... Ever...", "Crime does pay", "Heavy breather", "Watch out for that Sarlacc!", "Really just wants to go to Tosche Station", "Does anyone else feel the need for a Cinnabon?", "FREEZE!", "this \!\= moon\;", "Fuzzball", "Pure elegance", "sizeOf\(this\) \!\= judgement\;", "Nub Nub!", "Doesn\'t love the empire", "Has anyone seen the wrinkle cream?", "Comb the desert! Oh wait, wrong movie", "How is a parsec a unit of time?", "Force user", "Come in pairs", "Don't lose your head!", "Don't lose your head!", "Watch out for that... tree!", "Too old for this sort of thing"];
 
 			var alphabet = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "Y", "Z"];
 
