--- a/hangman.html
+++ b/hangman.html
@@ -35,7 +35,7 @@
 
 			var hints = ["Best... Movie... Ever...", "Crime does pay", "Heavy breather", "Watch out for that Sarlacc!", "Really just wants to go to Tosche Station", "Does anyone else feel the need for a Cinnabon?", "FREEZE!", "this \!\= moon\;", "Fuzzball", "Pure elegance", "sizeOf\(this\) \!\= judgement\;", "Nub Nub!", "Doesn\'t love the empire", "Has anyone seen the wrinkle cream?", "Comb the desert! Oh wait, wrong movie", "How is a parsec a unit of time?", "Force user", "Come in pairs", "Don't lose your head!", "Don't lose your head!", "Watch out for that... tree!", "Too old for this sort of thing"];
 
-			var alphabet = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "Y", "Z"];
+			var alphabet = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"];
 
 			var userGuess = "";
 			var lettersGuessed = [];
